// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotFoundComponent should match the snapshot, in a desktop viewport 1`] = `
<div>
  <div
    class="fr-m-auto fr-mt-8w"
  >
    <h1
      class="text-center"
    >
      404 - Not Found
    </h1>
  </div>
</div>
`;

exports[`NotFoundComponent should match the snapshot, in a mobile viewport 1`] = `
<div>
  <div
    class="fr-m-auto fr-mt-4w"
  >
    <h1
      class="text-center"
    >
      404 - Not Found
    </h1>
  </div>
</div>
`;
